added more endpoints to the user_handler
