# api/docs/swagger.yaml
@@ -89,6 +89,19 @@ definitions:
       state:
         type: string
     type: object
+  user.User:
+    properties:
+      email:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: integer
+      last_name:
+        type: string
+      password:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
@@ -418,4 +431,24 @@ paths:
       summary: Prints the list of states
       tags:
       - tax
+  /api/user/{id}:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/user.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errdto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errdto.ErrorResponse'
+      summary: Get the user
+      tags:
+      - user
 swagger: "2.0"
