# api/internal/dto/user/authenticate.go
@@ -1,0 +1,6 @@
+package user
+
+type Authenticate struct {
+	Email    string `json:"email"`
+	Password string `json:"password,omitempty"`
+}
